--- a/BodySlide.vcxproj
+++ b/BodySlide.vcxproj
@@ -571,6 +571,7 @@
     <ClInclude Include="lib\NIF\Geometry.h" />
     <ClInclude Include="lib\NIF\Keys.h" />
     <ClInclude Include="lib\NIF\NifFile.h" />
+    <ClInclude Include="lib\NIF\Nodes.h" />
     <ClInclude Include="lib\NIF\Objects.h" />
     <ClInclude Include="lib\NIF\Particles.h" />
     <ClInclude Include="lib\NIF\Shaders.h" />
@@ -652,6 +653,7 @@
     <ClCompile Include="lib\NIF\ExtraData.cpp" />
     <ClCompile Include="lib\NIF\Geometry.cpp" />
     <ClCompile Include="lib\NIF\NifFile.cpp" />
+    <ClCompile Include="lib\NIF\Nodes.cpp" />
     <ClCompile Include="lib\NIF\Objects.cpp" />
     <ClCompile Include="lib\NIF\Particles.cpp" />
     <ClCompile Include="lib\NIF\Shaders.cpp" />
