--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -1378,6 +1378,9 @@
     <ClInclude Include="lib\NIF\VertexData.h">
       <Filter>Libraries\NIF</Filter>
     </ClInclude>
+    <ClInclude Include="lib\NIF\Nodes.h">
+      <Filter>Libraries\NIF</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp">
@@ -1558,6 +1561,9 @@
       <Filter>Libraries\NIF</Filter>
     </ClCompile>
     <ClCompile Include="lib\NIF\Shaders.cpp">
+      <Filter>Libraries\NIF</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\NIF\Nodes.cpp">
       <Filter>Libraries\NIF</Filter>
     </ClCompile>
   </ItemGroup>
