Encoding support and fixes
- full UTF-8 support
- support for UTF-16 file names on Windows
- XMLs are loaded and saved as UTF-8 now
- XMLs that were wrongly encoded before can not be loaded anymore now and need to be re-encoded to UTF-8 externally

--- a/BodySlide.vcxproj
+++ b/BodySlide.vcxproj
@@ -638,6 +638,7 @@
     <ClInclude Include="src\utils\AABBTree.h" />
     <ClInclude Include="src\utils\ConfigurationManager.h" />
     <ClInclude Include="src\utils\Log.h" />
+    <ClInclude Include="src\utils\PlatformUtil.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\FSEngine\FSBSA.cpp" />
@@ -701,6 +702,7 @@
     <ClCompile Include="src\utils\AABBTree.cpp" />
     <ClCompile Include="src\utils\ConfigurationManager.cpp" />
     <ClCompile Include="src\utils\Log.cpp" />
+    <ClCompile Include="src\utils\PlatformUtil.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="Config.xml" />
