--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -1762,6 +1762,15 @@
     <ClInclude Include="lib\gli\glm\simd\integer.h">
       <Filter>Libraries\gli\glm\simd</Filter>
     </ClInclude>
+    <ClInclude Include="lib\LZ4F\lz4hc.h">
+      <Filter>Libraries\LZ4F</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\LZ4F\lz4.h">
+      <Filter>Libraries\LZ4F</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\LZ4F\lz4frame_static.h">
+      <Filter>Libraries\LZ4F</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp">
@@ -1934,6 +1943,12 @@
     </ClCompile>
     <ClCompile Include="lib\gli\glm\detail\glm.cpp">
       <Filter>Libraries\gli\glm\detail</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\LZ4F\lz4.c">
+      <Filter>Libraries\LZ4F</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\LZ4F\lz4hc.c">
+      <Filter>Libraries\LZ4F</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
