Added packing of group file to pack projects dialog

--- a/OutfitStudio.vcxproj
+++ b/OutfitStudio.vcxproj
@@ -757,6 +757,7 @@
     <ClInclude Include="src\files\TriFile.h" />
     <ClInclude Include="src\program\FBXImportDialog.h" />
     <ClInclude Include="src\program\FBXImportOptions.h" />
+    <ClInclude Include="src\program\GroupManager.h" />
     <ClInclude Include="src\program\OutfitProject.h" />
     <ClInclude Include="src\program\OutfitStudio.h" />
     <ClInclude Include="src\program\PresetSaveDialog.h" />
@@ -818,6 +819,7 @@
     <ClCompile Include="src\files\ResourceLoader.cpp" />
     <ClCompile Include="src\files\TriFile.cpp" />
     <ClCompile Include="src\program\FBXImportDialog.cpp" />
+    <ClCompile Include="src\program\GroupManager.cpp" />
     <ClCompile Include="src\program\OutfitProject.cpp" />
     <ClCompile Include="src\program\OutfitStudio.cpp" />
     <ClCompile Include="src\program\PresetSaveDialog.cpp" />
