Made changes to compile and run on Linux with gcc.
1.  Created CMakeLists.txt to build with CMake on Linux.  It might also
work on other systems.

2.  stricmp and strnicmp were being used; they are missing from
gcc's standard library implementation.  (This is a well-known and
long-standing bug in gcc.)  So I added src/utils/StringStuff.{cpp,h}
with implementations of case-insensitive string compare functions
and changed all instances of stricmp and strnicmp to use them.

3.  Added StringStuff to the VC project files so hopefully it'll still
build on that tool (which I do not have).

4.  Fixed a variety of minor bugs where the code was not standard
C++, but presumably VC was permissive enough that it compiled anyway.
Hopefully VC will accept these changes; I don't have VC.  The most
common bug was assigning a wxString to a std::string in an old-style
initializer; switching to the new initializer style fixed it.

5.  Added a few missing '#include' statements.

6.  Made some no-effect changes to silence compiler warnings, such as
adding "default: break;" to switch statements where some of the values
were not handled.

7.  gcc is missing acosf, cosf, sinf, atan2f, and fabsf.  (This is
a well-known and long-standing bug in gcc.)  Luckily, these are
just alternative names for existing functions, so I switched to the
other names.

8.  There were many locations where BS&OS tried to open files
with filenames where the path separator character was backslash.
I changed them to use forward slash instead.  This shouldn't affect
Windows execution, because Windows accepts either type of slash as a
path separator.  I tried my best to not let the slash style propagate
into data files, but I may not have been successful.

9.  There were a few locations where filenames were being converted to
lowercase before the file was opened.  As Linux is case sensitive, this
didn't work.  So I changed all of these instances so that the filename
is not converted.

10.  On Linux, the wxWidgets head

--- a/BodySlide.vcxproj
+++ b/BodySlide.vcxproj
@@ -769,6 +769,7 @@
     <ClInclude Include="src\utils\ConfigurationManager.h" />
     <ClInclude Include="src\utils\Log.h" />
     <ClInclude Include="src\utils\PlatformUtil.h" />
+    <ClInclude Include="src\utils\StringStuff.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\FSEngine\FSBSA.cpp" />
@@ -830,6 +831,7 @@
     <ClCompile Include="src\utils\ConfigurationManager.cpp" />
     <ClCompile Include="src\utils\Log.cpp" />
     <ClCompile Include="src\utils\PlatformUtil.cpp" />
+    <ClCompile Include="src\utils\StringStuff.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="Config.xml" />
