Split bone weight auto-normalize code out of TweakBrush.
I extracted the code for normalizing weights automatically out of
TweakBrush.cpp into WeightNorm.{h,cpp}.  This has two benefits:
1.  There's only one copy of the code instead of three, making it
easier to maintain.
2.  The code can be re-used for other weight-modifying algorithms.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set(OSsources
 	src/components/RefTemplates.cpp
 	src/components/TweakBrush.cpp
 	src/components/UndoHistory.cpp
+	src/components/WeightNorm.cpp
 	src/files/FBXWrangler.cpp
 	src/program/EditUV.cpp
 	src/program/FBXImportDialog.cpp
