--- a/OutfitStudio.vcxproj.filters
+++ b/OutfitStudio.vcxproj.filters
@@ -697,6 +697,9 @@
     <ClInclude Include="src\components\UndoHistory.h">
       <Filter>Components</Filter>
     </ClInclude>
+    <ClInclude Include="src\components\WeightNorm.h">
+      <Filter>Components</Filter>
+    </ClInclude>
     <ClInclude Include="src\components\Automorph.h">
       <Filter>Components</Filter>
     </ClInclude>
@@ -1834,6 +1837,9 @@
       <Filter>Components</Filter>
     </ClCompile>
     <ClCompile Include="src\components\UndoHistory.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\components\WeightNorm.cpp">
       <Filter>Components</Filter>
     </ClCompile>
     <ClCompile Include="src\components\Automorph.cpp">
